// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unordered list Default renders correctly 1`] = `
<jest>
  <ul
    class="ecl-unordered-list"
  >
    <li
      class="ecl-unordered-list__item"
    >
      Jobs, growth and investment
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          Investment Plan for Europe: the Juncker Plan
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          European Semester
        </li>
      </ul>
    </li>
    <li
      class="ecl-unordered-list__item"
    >
      Digital single market
    </li>
    <li
      class="ecl-unordered-list__item"
    >
      Energy union and climate
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          Security, solidarity and trust
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          A fully-integrated internal energy market
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          Energy efficiency
        </li>
      </ul>
    </li>
  </ul>
</jest>
`;

exports[`Unordered list Default renders correctly with divider variant 1`] = `
<jest>
  <ul
    class="ecl-unordered-list ecl-unordered-list--divider"
  >
    <li
      class="ecl-unordered-list__item"
    >
      <a
        class="ecl-link ecl-link--standalone"
        href="/example"
      >
        Jobs, growth and investment
      </a>
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            Investment Plan for Europe: the Juncker Plan
          </a>
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            European Semester
          </a>
        </li>
      </ul>
    </li>
    <li
      class="ecl-unordered-list__item"
    >
      <a
        class="ecl-link ecl-link--standalone"
        href="/example"
      >
        Digital single market
      </a>
    </li>
    <li
      class="ecl-unordered-list__item"
    >
      <a
        class="ecl-link ecl-link--standalone"
        href="/example"
      >
        Energy union and climate
      </a>
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            Security, solidarity and trust
          </a>
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            A fully-integrated internal energy market
          </a>
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            Energy efficiency
          </a>
        </li>
      </ul>
    </li>
  </ul>
</jest>
`;

exports[`Unordered list Default renders correctly with extra attributes 1`] = `
<jest>
  <ul
    class="ecl-unordered-list"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <li
      class="ecl-unordered-list__item"
    >
      Jobs, growth and investment
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          Investment Plan for Europe: the Juncker Plan
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          European Semester
        </li>
      </ul>
    </li>
    <li
      class="ecl-unordered-list__item"
    >
      Digital single market
    </li>
    <li
      class="ecl-unordered-list__item"
    >
      Energy union and climate
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          Security, solidarity and trust
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          A fully-integrated internal energy market
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          Energy efficiency
        </li>
      </ul>
    </li>
  </ul>
</jest>
`;

exports[`Unordered list Default renders correctly with extra class names 1`] = `
<jest>
  <ul
    class="ecl-unordered-list custom-class custom-class--test"
  >
    <li
      class="ecl-unordered-list__item"
    >
      Jobs, growth and investment
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          Investment Plan for Europe: the Juncker Plan
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          European Semester
        </li>
      </ul>
    </li>
    <li
      class="ecl-unordered-list__item"
    >
      Digital single market
    </li>
    <li
      class="ecl-unordered-list__item"
    >
      Energy union and climate
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          Security, solidarity and trust
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          A fully-integrated internal energy market
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          Energy efficiency
        </li>
      </ul>
    </li>
  </ul>
</jest>
`;

exports[`Unordered list Default renders correctly with no-bullet variant 1`] = `
<jest>
  <ul
    class="ecl-unordered-list ecl-unordered-list--no-bullet"
  >
    <li
      class="ecl-unordered-list__item"
    >
      <a
        class="ecl-link ecl-link--standalone"
        href="/example"
      >
        Jobs, growth and investment
      </a>
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            Investment Plan for Europe: the Juncker Plan
          </a>
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            European Semester
          </a>
        </li>
      </ul>
    </li>
    <li
      class="ecl-unordered-list__item"
    >
      <a
        class="ecl-link ecl-link--standalone"
        href="/example"
      >
        Digital single market
      </a>
    </li>
    <li
      class="ecl-unordered-list__item"
    >
      <a
        class="ecl-link ecl-link--standalone"
        href="/example"
      >
        Energy union and climate
      </a>
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            Security, solidarity and trust
          </a>
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            A fully-integrated internal energy market
          </a>
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            Energy efficiency
          </a>
        </li>
      </ul>
    </li>
  </ul>
</jest>
`;
